<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/ScrollView"
  android:orientation="vertical"
  android:layout_height="fill_parent"
  android:layout_width="fill_parent">
  <LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <TextView
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/item" />
    <EditText
      android:layout_height="wrap_content"
      android:layout_width="fill_parent"
      android:id="@+id/item"
      android:tag="@string/item"
      android:autoText="true"
      android:maxLines="1"
      android:inputType="text"></EditText>
    <TextView
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/expense" />
    <EditText
      android:layout_height="wrap_content"
      android:layout_width="fill_parent"
      android:id="@+id/expense"
      android:tag="@string/expense"
      android:autoText="true"
      android:maxLines="1"
      android:inputType="text|number"></EditText>
    <TextView
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/comment" />
    <EditText
      android:layout_height="wrap_content"
      android:layout_width="fill_parent"
      android:id="@+id/comment"
      android:tag="@string/comment"
      android:autoText="true"
      android:maxLines="1"
      android:inputType="text"></EditText>
    <TextView
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/category" />
    <Spinner
      android:layout_height="wrap_content"
      android:layout_width="fill_parent"
      android:id="@+id/category"
      android:tag="@string/category"
      android:entries="@array/category_list" />
    <CheckBox
      android:text="@string/creditcard"
      android:id="@+id/creditcard"
      android:tag="@string/creditcard"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"></CheckBox>
    <CheckBox
      android:text="@string/secret"
      android:id="@+id/secret"
      android:tag="@string/secret"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"></CheckBox>
    <Button
      android:text="@string/tweet"
      android:id="@+id/tweet"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"></Button>
    <Button
      android:text="@string/reset"
      android:id="@+id/reset"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"></Button>
  </LinearLayout>
</ScrollView>
